--- a/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
+++ b/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
@@ -21,6 +21,7 @@
 .photoTitle {
     margin-top: 10px;
     margin-bottom: 10px;
+    background-color: transparent;
 } 
 
 .photoInput {
@@ -28,9 +29,16 @@
 }
 
 .customFileUpload {
-   padding: 10px;
-   background-color: #f0f0f0;
-   cursor: pointer;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   border: 2px solid transparent; 
+   background-color: var(--two);
    border-radius: 5px;
-   /* Add more styles as needed */
+   width: 20rem;
+   height: 2rem;
+   font-size: 0.85rem;
+   transition: all 0.3s;
+   cursor:pointer;
+   box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
 }
