--- a/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
+++ b/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
@@ -3,9 +3,9 @@
     justify-content: center;
     align-items: center;
     margin-top: 20px;
-    width: 100%;
+    
 }
 
 .newReviewSubmit {
-    width: 100%;
+    width: 20rem;
 }
