--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,7 +51,7 @@ body {
 } 
 
 .blueButton:hover { 
-    height: calc(var(--bh) * 1.1);
+    /* height: calc(var(--bh) * 1.1); */
     border: 2px solid var(--three);
     color: var(--three)
  }
