--- a/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
+++ b/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
@@ -39,6 +39,7 @@
    height: 2rem;
    font-size: 0.85rem;
    transition: all 0.3s;
+   margin-top: 15px;
    cursor:pointer;
    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
 }
