--- a/frontend/src/components/Auth/DemoUserForm/DemoUserForm.css
+++ b/frontend/src/components/Auth/DemoUserForm/DemoUserForm.css
@@ -40,6 +40,7 @@
     background-color: var(--two);
     margin-top: 0.35rem;
     border-radius: 5px;
+    box-shadow: inset 0 -3px 5px rgba(0, 0, 0, 0.5);
 }
 
 .inputDUF {
