--- a/frontend/src/components/Navigation/SearchBar/SearchBarButton/SearchBarButton.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBarButton/SearchBarButton.css
@@ -1,29 +1,34 @@
 
-.searchButton {
+/* .searchButton {
     display: flex;
     justify-content: center;
     align-items: center;
     height: calc(var(--bh) * 0.90);
     border: 2px solid transparent; 
-    width: calc(var(--bh) * 3);
+    width: calc(var(--bh) * 1);
     background-color: var(--two);
     color: white;
     border-radius: 0px 6px 6px 0px;
-}
+} */
 
-.SBblueButton {
-    height: var(--bh);
-    border-radius: 5px;
+.blueButtonSB {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(var(--bh) * 0.90);
+    width: calc(var(--bh) * 1);
+    border: 2px solid transparent; 
+    border-radius: 0px 6px 6px 0px;
     background-color: var(--two);
     color: white;  
     font-weight:bolder;
     transition: all 0.3s;
     cursor:pointer;
-    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
-    background-color: blueviolet;
+    /* box-shadow: 0 5px 7px rgba(0, 0, 0, 0.5); */
+    box-shadow: inset 0 -5px 7px rgba(0, 0, 0, 0.5);
 } 
 
-.SBblueButton:hover { 
+.blueButtonSB:hover { 
     height: var(--bh);
     border: 2px solid var(--three);
     color: var(--three)
