--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,7 +47,8 @@ body {
     font-weight:bolder;
     transition: all 0.3s;
     cursor:pointer;
-    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3); */
+    box-shadow: inset 0 -3px 5px rgba(0, 0, 0, 0.5);
 } 
 
 .blueButton:hover { 
