fix the searchbar so it clears appropriately

--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -33,11 +33,15 @@
     justify-content: center;
     align-items: center;
 }
+
 .SBInput {
     width: 170px;
     border: none;
     outline: none;
 }
+.SBInput::placeholder {
+    color: var(--one)
+  }
 
 .SBDropDown {
     position: absolute;
