the add review and delete review are working perfectly

--- a/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
+++ b/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
@@ -46,6 +46,13 @@
     font-style: italic;
     color: var(--two);
 }
+/* .textareaLarge {
+    font-family: inherit;
+    font-size: inherit;
+    font-weight: inherit;
+    width: 100%;
+    height: 100%;
+} */
 
 .imgRN {
     height: 100px;
