--- a/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
+++ b/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
@@ -13,6 +13,7 @@
     border-radius: 1rem;
     /* background-color: white; */
     background-color: var(--one);
+    background-color: red;
 
 }
 
