--- a/frontend/src/components/Modals/ReviewModal/xReviewModal.css
+++ b/frontend/src/components/Modals/ReviewModal/xReviewModal.css
@@ -1,19 +1,19 @@
 
-
+/* 
 .modalBackgroundRF {
     position:fixed;
     /* position: absolute; */
-    top: 0;
+    /* top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.7);
     z-index: 998;
-}
+} */
 
-.modalBackgroundRF.hide {
+/* .modalBackgroundRF.hide {
     display: none
-}
+} */ 
 
 
 
