--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -19,54 +19,13 @@
     margin-top: 75px;
 }
 
-#frontContainer {
-    position: absolute;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: max(350px, 50%);
-    z-index: 20;
-    background-color: red;
-}
 #backgroundContainer {
     position: absolute;
     top: 0;
     left: 0;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
     width: 100%;
     height: 100%;
     z-index: 10;
-}
-
-.leftBanner {
-    display: flex;
-    flex-grow: 1;
-}
-.centerBanner {
-    display: flex;
-    width: 60%;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    color: white;
-}
-
-#bannerSearchBar {
-    width: 75%;
-}
-.secondLine {
-    font-size: smaller;
-}
-.rightBanner {
-    display: flex;
-    flex-grow: 1;
 }
 
 .cardContainer {
@@ -77,7 +36,16 @@
     height: 100%;
 }
 
+.bannerTextBI {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .greenText {
     color: var(--three);
+    font-size: 5rem;
+    font-weight: bold;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
