--- a/frontend/src/components/Business/BusinessCard/BusinessCard.css
+++ b/frontend/src/components/Business/BusinessCard/BusinessCard.css
@@ -5,6 +5,8 @@
     margin: 20px;
     border-radius: 7px;
     box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
+   
 }
 
 #imageContainer {
@@ -15,6 +17,7 @@
     justify-content: center;
     border-radius: 14px 0px 0px 14px;
     background-color: #5cb9ff;
+  
 }
 
 #busPic {
@@ -33,6 +36,7 @@
     background-color: white;
     border-radius: 0 14px 14px 0;
     padding: 20px;
+    background-color: rgb(168, 237, 207);
 }
 
 .firstLine {
@@ -43,3 +47,17 @@
 #x {
     color: gray;
 }
+
+.businessLink {
+    text-decoration: none; 
+    color: var(--two);  
+    font-weight: 600;
+}
+
+
+.businessLink:visited,
+.businessLink:hover,
+.businessLink:active {
+    color: var(--two)
+}
+
