--- a/frontend/src/components/Helpers/Caroursel/Carousel.css
+++ b/frontend/src/components/Helpers/Caroursel/Carousel.css
@@ -54,8 +54,6 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-
-    /* background-color: blue; */
 }
 
 .carTitle {
@@ -95,6 +93,7 @@
     font-size: 0.5in;
     font-weight: 800;
     color: white;
+    cursor: pointer;
 }
 
 .carTitleSpace {
@@ -123,6 +122,7 @@
     background-color: var(--two);
     border-radius: 50px;
     box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 
 .carTitle44 {
@@ -139,6 +139,7 @@
     background-color: var(--two);
     border-radius: 50px;
     box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 .carTitle444 {
     display: flex;
@@ -153,6 +154,7 @@
     background-color: var(--two);
     border-radius: 50px;
     box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
 
 .containerCAR1 {
