--- a/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
+++ b/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
@@ -3,14 +3,13 @@
 #displayContainer {
     display: flex;
     flex-direction: row;
-    justify-content: start;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     width: 100%;
-    height:100%;
-    padding-left: 10%;
-    padding-right: 10%;
-    /* background-color: #efe9b8; */
-    /* background-color: rgba(92,185,255, 0.4);   */
+    height: 50vh;
+    overflow-y: auto; 
+    overflow-x: none;
     background-color: var(--three);
     box-shadow: 7px 7px 7px 7px rgba(0, 0, 0, 0.3);
 }
