--- a/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
+++ b/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
@@ -3,7 +3,7 @@
 #displayContainer {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: start;
     justify-content: center;
     flex-wrap: wrap;
     width: 100%;
@@ -12,4 +12,5 @@
     overflow-x: none;
     background-color: var(--three);
     box-shadow: 7px 7px 7px 7px rgba(0, 0, 0, 0.3);
+    padding-top: 20px;
 }
