--- a/frontend/src/components/Auth/LoginForm/LoginForm.css
+++ b/frontend/src/components/Auth/LoginForm/LoginForm.css
@@ -14,6 +14,7 @@
     border: 2px solid var(--two);
     border-radius: 1rem;
     background-color: var(--one);
+    cursor: auto;
 }
 
 #formContainerLIF {
