--- a/frontend/src/components/Auth/SignupForm/SignupForm.css
+++ b/frontend/src/components/Auth/SignupForm/SignupForm.css
@@ -13,7 +13,7 @@
     border-radius: 1rem;
     background-color: white;
     background-color: var(--one);
-
+    cursor:auto;
 }
 
 #formContainerSUF {
