--- a/frontend/src/components/Modals/ReviewModal/ReviewModal.css
+++ b/frontend/src/components/Modals/ReviewModal/ReviewModal.css
@@ -1,13 +1,13 @@
 
 .modalBackgroundRF {
     position:fixed;
-    /* position: absolute; */
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.7);
     z-index: 998;
+    cursor: pointer;
 }
 
 .modalBackgroundRF.hide {
