fix cursor on the input stars

--- a/frontend/src/components/Reviews/RatingInput/RatingInputEdit.css
+++ b/frontend/src/components/Reviews/RatingInput/RatingInputEdit.css
@@ -33,8 +33,10 @@
 
 .colored-in-E {
     color: var(--two);
+    cursor: pointer;
 }
 
 .not-colored-in-E {
     color: gray;
+    cursor: pointer;
 }
